--- a/arch/arm/Makefile
+++ b/arch/arm/Makefile
@@ -355,9 +355,12 @@ $(INSTALL_TARGETS):
 %.dtb: | scripts
 	$(Q)$(MAKE) $(build)=$(boot)/dts MACHINE=$(MACHINE) $(boot)/dts/$@
 
+%.dtbo: | scripts $(DRVGEN_FILE_LIST)
+	$(Q)$(MAKE) $(build)=$(boot)/dts MACHINE=$(MACHINE) $(boot)/dts/$@
+
 PHONY += dtbs dtbs_install
 
-dtbs: prepare scripts
+dtbs: prepare scripts drvgen
 	$(Q)$(MAKE) $(build)=$(boot)/dts
 
 dtbs_install:
