arch/arm64: Nuke mtk.dtb building
Change-Id: Ie8e2f5ca700bc7af5e695ab2aff6ac3c16ae9d79
Signed-off-by: nishant6342 <www.rajsonu13@gmail.com>

--- a/arch/arm64/boot/Makefile
+++ b/arch/arm64/boot/Makefile
@@ -56,7 +56,7 @@ $(obj)/Image.lzo: $(obj)/Image FORCE
 	$(call if_changed,lzo)
 
 $(obj)/Image.gz-dtb: $(obj)/Image.gz $(DTB_OBJS) FORCE
-	$(call if_changed,cat)
+	cat $(obj)/Image.gz $(DTB_OBJS) > $@
 
 install:
 	$(CONFIG_SHELL) $(srctree)/$(src)/install.sh $(KERNELRELEASE) \
