treewide: Fix various kconfigs warning
Change-Id: Icb91958f266e9f6db049cde8ea50bd854b41de03
Signed-off-by: neilchetty <neilchetty4559@gmail.com>
Signed-off-by: nishant6342 <www.rajsonu13@gmail.com>

--- a/sound/soc/codecs/audio/Kconfig
+++ b/sound/soc/codecs/audio/Kconfig
@@ -15,7 +15,7 @@ config SIA_PA_REG_MT6769
         default n
 
 config SND_SOC_AW87339
-	bool "Use AW87339 As PA"
+	tristate "Use AW87339 As PA"
 	default n
 
 config HSKEY_BLOCK
