--- a/arch/arm64/configs/c25_defconfig
+++ b/arch/arm64/configs/c25_defconfig
@@ -5002,6 +5002,10 @@ CONFIG_PM_OPP=y
 # CONFIG_LEGACY_ENERGY_MODEL_DT is not set
 
 #
+# KernelSU
+#
+CONFIG_KSU=n
+# CONFIG_KSU_DEBUG is not set
 #
 # File systems
 #
