arch/arm64: Add DTB overlay image names and enable MTK DTBO feature

--- a/arch/arm64/configs/even_defconfig
+++ b/arch/arm64/configs/even_defconfig
@@ -604,6 +604,7 @@ CONFIG_CMDLINE_FROM_BOOTLOADER=y
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
 CONFIG_IMG_GZ_DTB=y
 # CONFIG_IMG_DTB is not set
+CONFIG_BUILD_ARM64_DTB_OVERLAY_IMAGE_NAMES="mediatek/oppo6768_20761 mediatek/oppo6769_206AC mediatek/oppo6769_19741 mediatek/oppo6769_19747 mediatek/oppo6769_2167A mediatek/oppo6769_216AF"
 CONFIG_BUILD_ARM64_APPENDED_KERNEL_IMAGE_NAME="Image.gz-dtb"
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="mediatek/mt6768"
 
@@ -1370,6 +1371,7 @@ CONFIG_ARCH_MTK_PROJECT="oppo6769"
 # CONFIG_MTK_AB_OTA_UPDATER is not set
 CONFIG_SYSTEM_AS_ROOT=y
 CONFIG_MTK_LM_MODE=y
+CONFIG_MTK_DTBO_FEATURE=y
 CONFIG_MTK_BOUNCING_CHECK=y
 # CONFIG_MTK_ENG_BUILD is not set
 # CONFIG_EXTREME_LOW_RAM is not set
