Update kernel and driver files with various improvements and fixes
- Changed the path for KernelSU in the kernelsu driver.
- Fixed function parameter declaration in mtk_mcdi_governor.c.
- Added missing void keyword in function declarations across multiple sensor drivers.
- Updated display recorder to include void in function return types.
- Corrected static variable declarations in battery and charger drivers.
- Modified ion driver to ensure proper function declarations.
- Enhanced exec and open system calls to include KSU hooks for improved security.
- Updated sia81xx socket server function to include void in its declaration.

These changes enhance code readability, maintainability, and ensure compliance with coding standards.

--- a/arch/arm64/configs/even_ksu_defconfig
+++ b/arch/arm64/configs/even_ksu_defconfig
@@ -1,15 +1,16 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.19.191 Kernel Configuration
+# Linux/arm64 4.19.325 Kernel Configuration
 #
 
 #
-# Compiler: Proton clang version 13.0.0 (https://github.com/llvm/llvm-project b4fd512c36ca344a3ff69350219e8b0a67e9472a)
+# Compiler: Android (11967740, +pgo, +bolt, +lto, +mlgo, based on r522817) clang version 18.0.1 (https://android.googlesource.com/toolchain/llvm-project d8003a456d14a3deb8054cdaa529ffbf02d9b262)
 #
 CONFIG_GCC_VERSION=0
 CONFIG_CC_IS_CLANG=y
 CONFIG_LD_IS_LLD=y
-CONFIG_CLANG_VERSION=130000
+CONFIG_CLANG_VERSION=180001
+CONFIG_LLD_VERSION=180001
 CONFIG_CC_HAS_ASM_GOTO=y
 CONFIG_TOOLS_SUPPORT_RELR=y
 CONFIG_IRQ_WORK=y
@@ -198,7 +199,7 @@ CONFIG_AIO=y
 CONFIG_ADVISE_SYSCALLS=y
 CONFIG_MEMBARRIER=y
 CONFIG_KALLSYMS=y
-# CONFIG_KALLSYMS_ALL is not set
+CONFIG_KALLSYMS_ALL=y
 # CONFIG_KALLSYMS_BASE_RELATIVE is not set
 CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_JIT_ALWAYS_ON=y
@@ -224,7 +225,6 @@ CONFIG_MTK_SCHED_INTEROP=y
 CONFIG_MTK_SCHED_LB_ENHANCEMENT=y
 CONFIG_MTK_SCHED_TRACERS=y
 CONFIG_MTK_SCHED_CPU_PREFER=y
-CONFIG_MTK_SCHED_BIG_TASK_MIGRATE=y
 
 #
 # Kernel Performance Events And Counters
@@ -352,6 +352,8 @@ CONFIG_ARM64_ERRATUM_843419=y
 CONFIG_ARM64_ERRATUM_1024718=y
 CONFIG_ARM64_ERRATUM_1463225=y
 CONFIG_ARM64_ERRATUM_1542419=y
+CONFIG_ARM64_ERRATUM_1742098=y
+CONFIG_ARM64_ERRATUM_3194386=y
 CONFIG_CAVIUM_ERRATUM_22375=y
 CONFIG_CAVIUM_ERRATUM_23154=y
 CONFIG_CAVIUM_ERRATUM_27456=y
@@ -395,6 +397,7 @@ CONFIG_HW_PERF_EVENTS=y
 CONFIG_SYS_SUPPORTS_HUGETLBFS=y
 CONFIG_ARCH_WANT_HUGE_PMD_SHARE=y
 CONFIG_ARCH_HAS_CACHE_LINE_SIZE=y
+CONFIG_CC_HAVE_SHADOW_CALL_STACK=y
 # CONFIG_ARM64_DMA_USE_IOMMU is not set
 CONFIG_SECCOMP=y
 # CONFIG_PARAVIRT is not set
@@ -581,7 +584,6 @@ CONFIG_CRYPTO_POLY1305_NEON=y
 # CONFIG_JUMP_LABEL is not set
 CONFIG_UPROBES=y
 CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
-CONFIG_KRETPROBES=y
 CONFIG_HAVE_KPROBES=y
 CONFIG_HAVE_KRETPROBES=y
 CONFIG_HAVE_NMI=y
@@ -866,6 +868,7 @@ CONFIG_INET_AH=y
 CONFIG_INET_ESP=y
 # CONFIG_INET_ESP_OFFLOAD is not set
 CONFIG_INET_IPCOMP=y
+CONFIG_INET_TABLE_PERTURB_ORDER=16
 CONFIG_INET_XFRM_TUNNEL=y
 CONFIG_INET_TUNNEL=y
 CONFIG_INET_XFRM_MODE_TRANSPORT=y
@@ -1166,7 +1169,6 @@ CONFIG_HAVE_NET_DSA=y
 CONFIG_VLAN_8021Q=y
 # CONFIG_VLAN_8021Q_GVRP is not set
 # CONFIG_VLAN_8021Q_MVRP is not set
-# CONFIG_DECNET is not set
 CONFIG_LLC=y
 # CONFIG_LLC2 is not set
 # CONFIG_ATALK is not set
@@ -1180,7 +1182,6 @@ CONFIG_NET_SCHED=y
 #
 # Queueing/Scheduling
 #
-# CONFIG_NET_SCH_CBQ is not set
 CONFIG_NET_SCH_HTB=y
 # CONFIG_NET_SCH_HFSC is not set
 # CONFIG_NET_SCH_PRIO is not set
@@ -1193,7 +1194,6 @@ CONFIG_NET_SCH_HTB=y
 # CONFIG_NET_SCH_CBS is not set
 # CONFIG_NET_SCH_ETF is not set
 # CONFIG_NET_SCH_GRED is not set
-# CONFIG_NET_SCH_DSMARK is not set
 # CONFIG_NET_SCH_NETEM is not set
 # CONFIG_NET_SCH_DRR is not set
 # CONFIG_NET_SCH_MQPRIO is not set
@@ -1215,14 +1215,11 @@ CONFIG_NET_SCH_INGRESS=y
 #
 CONFIG_NET_CLS=y
 # CONFIG_NET_CLS_BASIC is not set
-# CONFIG_NET_CLS_TCINDEX is not set
 # CONFIG_NET_CLS_ROUTE4 is not set
 CONFIG_NET_CLS_FW=y
 CONFIG_NET_CLS_U32=y
 CONFIG_CLS_U32_PERF=y
 CONFIG_CLS_U32_MARK=y
-# CONFIG_NET_CLS_RSVP is not set
-# CONFIG_NET_CLS_RSVP6 is not set
 CONFIG_NET_CLS_FLOW=y
 # CONFIG_NET_CLS_CGROUP is not set
 CONFIG_NET_CLS_BPF=y
@@ -1980,13 +1977,9 @@ CONFIG_MTK_RTC=y
 CONFIG_MTK_PERFORMANCE_MODULE=y
 CONFIG_MTK_PERF_COMMON=y
 # CONFIG_MTK_PERF_TRACKER is not set
-# CONFIG_MTK_CORE_CTL is not set
-# CONFIG_MTK_PERFMGR_TOUCH_BOOST is not set
-# CONFIG_MTK_LOAD_TRACKER is not set
+# CONFIG_MTK_TOPO_CTRL is not set
 # CONFIG_MTK_PERF_OBSERVER is not set
 CONFIG_MTK_RESYM=y
-CONFIG_MTK_FPSGO_V3=y
-# CONFIG_MTK_GBE is not set
 # CONFIG_MTK_FRS is not set
 CONFIG_MTK_TASK_TURBO=y
 
@@ -2942,6 +2935,7 @@ CONFIG_CHARGER_SY6970=y
 # CONFIG_CHARGER_SC8551 is not set
 # CONFIG_CHARGER_SMB347 is not set
 # CONFIG_BATTERY_GAUGE_LTC2941 is not set
+# CONFIG_BATTERY_RT5033 is not set
 # CONFIG_CHARGER_RT9455 is not set
 CONFIG_MTK_CHARGER=y
 CONFIG_MTK_KERNEL_POWER_OFF_CHARGING=y
@@ -3144,7 +3138,6 @@ CONFIG_MT6358_MISC=y
 # CONFIG_ABX500_CORE is not set
 # CONFIG_MFD_STMPE is not set
 CONFIG_MFD_SYSCON=y
-# CONFIG_MFD_TI_AM335X_TSCADC is not set
 # CONFIG_MFD_LP3943 is not set
 # CONFIG_MFD_LP8788 is not set
 # CONFIG_MFD_TI_LMU is not set
@@ -4656,6 +4649,10 @@ CONFIG_MT635X_AUXADC=y
 # CONFIG_VF610_ADC is not set
 
 #
+# Analog to digital and digital to analog converters
+#
+
+#
 # Analog Front Ends
 #
 # CONFIG_IIO_RESCALE is not set
@@ -5006,6 +5003,11 @@ CONFIG_PM_OPP=y
 #
 CONFIG_KSU=y
 # CONFIG_KSU_DEBUG is not set
+# CONFIG_KSU_ALLOWLIST_WORKAROUND is not set
+# CONFIG_KSU_CMDLINE is not set
+CONFIG_KSU_MANUAL_HOOK=y
+CONFIG_KPM=y
+CONFIG_KSU_LSM_SECURITY_HOOKS=y
 
 #
 # File systems
@@ -5020,9 +5022,7 @@ CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_EXT4_ENCRYPTION=y
 CONFIG_EXT4_FS_ENCRYPTION=y
-CONFIG_EXT4_ASYNC_DISCARD_SUPPORT=y
 # CONFIG_EXT4_DEBUG is not set
-CONFIG_OPLUS_FEATURE_EXT4_FSYNC=y
 CONFIG_JBD2=y
 # CONFIG_JBD2_DEBUG is not set
 CONFIG_FS_MBCACHE=y
@@ -5253,7 +5253,6 @@ CONFIG_HAVE_HARDENED_USERCOPY_ALLOCATOR=y
 CONFIG_HARDENED_USERCOPY=y
 CONFIG_HARDENED_USERCOPY_FALLBACK=y
 # CONFIG_HARDENED_USERCOPY_PAGESPAN is not set
-# CONFIG_FORTIFY_SOURCE is not set
 CONFIG_STATIC_USERMODEHELPER=y
 CONFIG_STATIC_USERMODEHELPER_PATH="/system_ext/bin/aee_core_forwarder"
 CONFIG_SECURITY_SELINUX=y
@@ -5285,8 +5284,11 @@ CONFIG_DEFAULT_SECURITY="selinux"
 # Memory initialization
 #
 CONFIG_CC_HAS_AUTO_VAR_INIT_PATTERN=y
+CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO_BARE=y
 CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO=y
 CONFIG_INIT_STACK_NONE=y
+# CONFIG_INIT_STACK_ALL_PATTERN is not set
+# CONFIG_INIT_STACK_ALL_ZERO is not set
 # CONFIG_INIT_ON_ALLOC_DEFAULT_ON is not set
 # CONFIG_INIT_ON_FREE_DEFAULT_ON is not set
 CONFIG_CRYPTO=y
@@ -5370,6 +5372,7 @@ CONFIG_CRYPTO_XCBC=y
 CONFIG_CRYPTO_CRC32C=y
 CONFIG_CRYPTO_CRC32=y
 # CONFIG_CRYPTO_BLAKE2S is not set
+# CONFIG_CRYPTO_BLAKE2B is not set
 # CONFIG_CRYPTO_CRCT10DIF is not set
 CONFIG_CRYPTO_GHASH=y
 CONFIG_CRYPTO_POLY1305=y
@@ -5437,22 +5440,6 @@ CONFIG_CRYPTO_JITTERENTROPY=y
 # CONFIG_CRYPTO_USER_API_RNG is not set
 # CONFIG_CRYPTO_USER_API_AEAD is not set
 CONFIG_CRYPTO_HASH_INFO=y
-
-#
-# Crypto library routines
-#
-CONFIG_CRYPTO_LIB_BLAKE2S_GENERIC=y
-CONFIG_CRYPTO_LIB_BLAKE2S=y
-CONFIG_CRYPTO_ARCH_HAVE_LIB_CHACHA=y
-CONFIG_CRYPTO_LIB_CHACHA_GENERIC=y
-CONFIG_CRYPTO_LIB_CHACHA=y
-CONFIG_CRYPTO_LIB_POLY1305_RSIZE=9
-CONFIG_CRYPTO_ARCH_HAVE_LIB_POLY1305=y
-CONFIG_CRYPTO_LIB_POLY1305_GENERIC=y
-CONFIG_CRYPTO_LIB_POLY1305=y
-CONFIG_CRYPTO_LIB_CURVE25519_GENERIC=y
-CONFIG_CRYPTO_LIB_CURVE25519=y
-CONFIG_CRYPTO_LIB_CHACHA20POLY1305=y
 # CONFIG_CRYPTO_HW is not set
 CONFIG_ASYMMETRIC_KEY_TYPE=y
 CONFIG_ASYMMETRIC_PUBLIC_KEY_SUBTYPE=y
@@ -5485,6 +5472,22 @@ CONFIG_GENERIC_PCI_IOMAP=y
 CONFIG_ARCH_USE_CMPXCHG_LOCKREF=y
 CONFIG_ARCH_HAS_FAST_MULTIPLIER=y
 # CONFIG_INDIRECT_PIO is not set
+
+#
+# Crypto library routines
+#
+CONFIG_CRYPTO_LIB_BLAKE2S_GENERIC=y
+CONFIG_CRYPTO_ARCH_HAVE_LIB_CHACHA=y
+CONFIG_CRYPTO_LIB_CHACHA_GENERIC=y
+CONFIG_CRYPTO_LIB_CHACHA=y
+CONFIG_CRYPTO_LIB_CURVE25519_GENERIC=y
+CONFIG_CRYPTO_LIB_CURVE25519=y
+CONFIG_CRYPTO_LIB_POLY1305_RSIZE=9
+CONFIG_CRYPTO_ARCH_HAVE_LIB_POLY1305=y
+CONFIG_CRYPTO_LIB_POLY1305_GENERIC=y
+CONFIG_CRYPTO_LIB_POLY1305=y
+CONFIG_CRYPTO_LIB_CHACHA20POLY1305=y
+CONFIG_LIB_MEMNEQ=y
 CONFIG_CRC_CCITT=y
 CONFIG_CRC16=y
 # CONFIG_CRC_T10DIF is not set
@@ -5721,7 +5724,6 @@ CONFIG_BRANCH_PROFILE_NONE=y
 # CONFIG_PROFILE_ALL_BRANCHES is not set
 # CONFIG_STACK_TRACER is not set
 # CONFIG_BLK_DEV_IO_TRACE is not set
-CONFIG_KPROBE_EVENTS=y
 CONFIG_UPROBE_EVENTS=y
 CONFIG_BPF_EVENTS=y
 CONFIG_PROBE_EVENTS=y
@@ -5738,7 +5740,6 @@ CONFIG_TRACING_EVENTS_GPIO=y
 CONFIG_RUNTIME_TESTING_MENU=y
 # CONFIG_TEST_LIST_SORT is not set
 # CONFIG_TEST_SORT is not set
-# CONFIG_KPROBES_SANITY_TEST is not set
 # CONFIG_BACKTRACE_SELF_TEST is not set
 # CONFIG_RBTREE_TEST is not set
 # CONFIG_INTERVAL_TREE_TEST is not set
